# hyperliquid-funding-arb-bot

./: .gitignore  Cargo.toml
src/: main.rs  place_order.rs  sign_action.rs
src/perps/: get_open_positions.rs  get_token_info.rs  mod.rs  structs.rs
src/spot/: get_token_info.rs  get_user_balances.rs  mod.rs  structs.rs
