[package]
name = "hl-arb-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
hex = "0.4.3"
reqwest = "0.12.25"
rust_decimal = "1.36"
serde = {version = "1.0.228",features = ["derive"]}
serde_json = "1.0.145"
tokio = {version = "1.48.0",features = ["full"]}
rmp-serde = "1.3"
dotenvy = "0.15.7"
alloy = { version = "1.0", default-features = false, features = [
  "dyn-abi",
  "sol-types",
  "signer-local",
] }